# OpenSport

./: .gitignore  AGENTS.md  IMU数据采集计划_修订标红版.docx  OpenSport_双设备IMU实时运动监测_PRD_V1.0.docx  README.md  build_collection_plan_docx.py  build_prd_docx.py  data_collection_timeline_template.csv  head_posture_collection_template.csv  monitor_dashboard.html  monitor_server.py  pyproject.toml  realtime_ble_imu.py  requirements.txt  serial_imu_bridge.py  witmonitor_csv_bridge.py  采集计划.md
config/: legacy_capture_corrections.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  IMU_COLLECTION_LABELING_EXAMPLE.md  IMU_DATA_COLLECTION_AND_LABELING_STANDARD.md  PROJECT_STRUCTURE.md
imu_analysis/: README.md  activity_features.py  activity_runtime.py  activity_taxonomy.py  app.py  ble_protocol.py  check_data.py  clean_data.py  compare_two_actions.py  extract_features.py  head_posture_features.py  head_posture_runtime.py  imu_common.py  label_schema.py  promote_activity_model.py  promote_posture_model.py  realtime_activity_ble.py  replay_activity.py  report_0721.py  run_pipeline.py  train_activity_model.py  train_head_posture_model.py  train_logistic.py  weak_session.py  workout_store.py  workout_strategy.py
schemas/: activity_label_v2.schema.json  posture_label.schema.json  quality_report.schema.json  session_manifest.schema.json
scripts/: audit_dual_labels.py  audit_imu_batch.py  build_filename_labels.py  build_long_session_labels.py  convert_legacy_txt_labels.py  import_imu_trial.py  migrate_legacy_evidence.py
templates/: activity_label_v2.template.json  (+2 more)
tests/: conftest.py  (+15 more)
(+32 files in other folders)
