[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opensport-imu"
version = "0.1.0"
description = "Versioned IMU ingestion, activity, workout and head-posture runtime"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
